; ModuleID = '/home/carl/AnghaBench/libuv/src/extr_uv-common.c_uv_udp_send.c'
source_filename = "/home/carl/AnghaBench/libuv/src/extr_uv-common.c_uv_udp_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_udp_send(i32* %0, i32* %1, i32* %2, i32 %3, %struct.sockaddr* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.sockaddr*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store %struct.sockaddr* %4, %struct.sockaddr** %12, align 8
  store i32 %5, i32* %13, align 4
  %15 = load i32*, i32** %9, align 8
  %16 = load %struct.sockaddr*, %struct.sockaddr** %12, align 8
  %17 = call i32 @uv__udp_check_before_send(i32* %15, %struct.sockaddr* %16)
  store i32 %17, i32* %14, align 4
  %18 = load i32, i32* %14, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %6
  %21 = load i32, i32* %14, align 4
  store i32 %21, i32* %7, align 4
  br label %31

22:                                               ; preds = %6
  %23 = load i32*, i32** %8, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = load i32*, i32** %10, align 8
  %26 = load i32, i32* %11, align 4
  %27 = load %struct.sockaddr*, %struct.sockaddr** %12, align 8
  %28 = load i32, i32* %14, align 4
  %29 = load i32, i32* %13, align 4
  %30 = call i32 @uv__udp_send(i32* %23, i32* %24, i32* %25, i32 %26, %struct.sockaddr* %27, i32 %28, i32 %29)
  store i32 %30, i32* %7, align 4
  br label %31

31:                                               ; preds = %22, %20
  %32 = load i32, i32* %7, align 4
  ret i32 %32
}

declare dso_local i32 @uv__udp_check_before_send(i32*, %struct.sockaddr*) #1

declare dso_local i32 @uv__udp_send(i32*, i32*, i32*, i32, %struct.sockaddr*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
